Crud pronto para teste nas talas
Atendente e entregador

--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Lista_Encomendas.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Lista_Encomendas.form
@@ -206,79 +206,13 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="6" rowCount="10">
-                    <Column editable="true" title="Numero do pedido" type="java.lang.Object">
-                      <Data value="12345"/>
-                      <Data value="12346"/>
-                      <Data value="12347"/>
-                      <Data value="12348"/>
-                      <Data value="12349"/>
-                      <Data value="12350"/>
-                      <Data value="12351"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                    </Column>
-                    <Column editable="true" title="Endere&#xe7;o de origem" type="java.lang.Object">
-                      <Data value="Rua das Flores, 123, Jardim da Penha, Vit&#xf3;ria"/>
-                      <Data value="Avenida Central, 456, Praia do Canto, Vit&#xf3;ria"/>
-                      <Data value="Travessa do Sol, 789, Centro, Vila Velha"/>
-                      <Data value="Rua dos P&#xe1;ssaros, 321, Itapu&#xe3;, Vila Velha"/>
-                      <Data value="Avenida Beira Mar, 654, Praia da Costa, Vila Velha"/>
-                      <Data value="Rua do Com&#xe9;rcio, 987, Centro, Serra"/>
-                      <Data value="Avenida das Ind&#xfa;strias, 135, Civit II, Serra"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                    </Column>
-                    <Column editable="true" title="Entregador" type="java.lang.Object">
-                      <Data value=" Vitor Ramos"/>
-                      <Data value="Gabriel Ant&#xf5;nio"/>
-                      <Data value="Melissa Lopes"/>
-                      <Data value="Tais Silva"/>
-                      <Data value="Ramon Cardoso"/>
-                      <Data value="Paolo Gimenez"/>
-                      <Data value="Ygor Pereira"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                    </Column>
-                    <Column editable="true" title="Endere&#xe7;o do destino" type="java.lang.Object">
-                      <Data value="Rua das Palmeiras, 123 - Centro, Vit&#xf3;ria"/>
-                      <Data value="Avenida Champagnat, 456 - Praia da Costa, Vila Velha"/>
-                      <Data value="Travessa das Flores, 789 - Jardim Am&#xe9;rica, Cariacica"/>
-                      <Data value="Avenida Tal, 321 - Serra Dourada, Serra"/>
-                      <Data value="Pra&#xe7;a Principal, 101 - Centro, Viana"/>
-                      <Data value="Rua dos Coqueiros, 234 - Jardim Camburi, Vit&#xf3;ria"/>
-                      <Data value="Avenida das Gaivotas, 567 - Itapu&#xe3;, Vila Velha "/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                    </Column>
-                    <Column editable="true" title="Data de entrega" type="java.lang.Object">
-                      <Data value="03/05/24"/>
-                      <Data value="04/05/24"/>
-                      <Data value="02/05/24"/>
-                      <Data value="02/05/24"/>
-                      <Data value="03/05/24"/>
-                      <Data value="03/05/24"/>
-                      <Data value="02/05/24"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                    </Column>
-                    <Column editable="true" title="Status" type="java.lang.Object">
-                      <Data value="Em andamento"/>
-                      <Data value="Agendada"/>
-                      <Data value="Finalizada"/>
-                      <Data value="Finalizada"/>
-                      <Data value="Em andamento"/>
-                      <Data value="Em andamento"/>
-                      <Data value="Finalizada"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                      <Data value="null"/>
-                    </Column>
+                  <Table columnCount="6" rowCount="0">
+                    <Column editable="true" title="numero_pedido" type="java.lang.Object"/>
+                    <Column editable="true" title="endereco_origem" type="java.lang.Object"/>
+                    <Column editable="true" title="nome_entregador" type="java.lang.Object"/>
+                    <Column editable="true" title="endereco_destino" type="java.lang.Object"/>
+                    <Column editable="true" title="data_entrega" type="java.lang.Object"/>
+                    <Column editable="true" title="statuss" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
