--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Informacoes_Entregador.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Informacoes_Entregador.form
@@ -68,7 +68,7 @@
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="JBTsalvar5" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
-                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                          <Component id="JBTcontinuar5" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="JPNazulclaro5" min="-2" max="-2" attributes="0"/>
                       <Component id="JTBlimpar5" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -97,7 +97,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="JBTsalvar5" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="JBTcancelar5" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="JBTcontinuar5" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
               </Group>
@@ -599,7 +599,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="JBTcontinuar5">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="33" red="ff" type="rgb"/>
@@ -613,7 +613,7 @@
             <Property name="text" type="java.lang.String" value="CONTINUAR"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JBTcontinuar5ActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="JTBlimpar5">
