--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Observacoes_Comentarioes.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Observacoes_Comentarioes.form
@@ -134,11 +134,6 @@
           </SubComponents>
         </Container>
         <Component class="javax.swing.JLabel" name="JLBmotoconnect12">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\PC\Desktop\MotoConnect_Projeto\Giampaolo_Projeto_Technight\MotoConnect\src\main\java\imagem_login\motoqueiro.png"/>
-            </Property>
-          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="JBTvoltar12">
           <Properties>
@@ -178,7 +173,7 @@
                           <Component id="JSPassunto12" alignment="0" pref="768" max="32767" attributes="0"/>
                           <Component id="JTFadministrador12" alignment="0" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="36" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
