--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Login.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Login.form
@@ -361,6 +361,9 @@
               <Dimension value="[115, 25]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JBTentregador1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="JLBou1">
           <Properties>
