--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Cadastro_Cliente.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Cadastro_Cliente.form
@@ -540,6 +540,9 @@
               <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField11ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="JBTpesquisar8">
           <Properties>
